--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,12 @@ classifiers = [
 ]
 dependencies = [
 	"jax>=0.7.0",
-	"jaxlib",
+	"jaxlib>=0.7.0",
 	"ray[default]==2.34.0",
 	"eformer>=0.0.62",
 	"einops~=0.8.0",
 	"transformers>=4.53.1",
-	"flax",
+	"flax==0.11.0",
 	"optax>=0.2.2",
 	"triton~=3.2.0",
 	"jaxtyping~=0.3.2",
